src/css/figure.css
/* ... */
    .zp-btn-down {
        background-image: url("../images/button-down-grey.png")
    }

    .pixel_size_div {
        position: absolute;
        top: -27px;
        left: 100px;
    }

    .pixel_size_display {
        cursor: pointer;
    }

    .new-label-form .input-group {
        width:160px;
        margin-right: 4px;
    }

    .scalebar_form .input-group {
        width:80px;
        margin-right: 4px;
    }

    .scalebar_form .form-group {
        margin-bottom: 0;
    }

    .scalebar_form .row {
        align-items: center;
        display: flex;
        gap: 3px;
        margin-top: 3px;
    }

    .scalebar_form .scalebar_length {
        padding-right: 0;
    }

    .scalebar_form .scalebar_text {
        padding-right: 0;
    }

    .scalebar {
        position: absolute;
    }

    .scalebar-label {
        position: absolute;
        left: -100%;
        width: 300%;
        text-align: center;
        line-height: 1;
    }
    .label_topleft .scalebar-label, .label_topright .scalebar-label {
        top: 3px;
    }
    .label_bottomleft .scalebar-label, .label_bottomright .scalebar-label {
        bottom: 4px;
    }

    .edit-label-form {
        position: relative;
    }

    .edit-label-form .input-group {
        width:140px;
        margin-right: 4px;
    }

    .form-inline .close {
        color: #FF0000;
        margin-left: 4px;
        opacity: 0.5;
    }
    .label_layout {
        position:absolute;
    }
    .label_layout p {
        margin: 0;
    }
    .left_vlabels>div {
        margin-bottom: 5px;
    }
    .right_vlabels>div {
        margin-bottom: 5px;
    }
    .label_middle, .label_middle table, .label_middle td {
        height:100%;
        width:10000px;
    }
    .label_middle td {
        vertical-align: middle;
    }

    .left_vlabels{
        position: absolute;
        right: 100%;
        height: 300%;
        top: -100%;
        width: 300%;
        text-align: center;
        -webkit-transform: rotate(-90deg);
        transform: rotate(-90deg);
    }
    .right_vlabels{
        position: absolute;
        left: 100%;
        height: 300%;
        top: -100%;
        width: 300%;
        text-align: center;
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }
    .left_vlabels>div {
        position: absolute;
        bottom:0;
        width:100%;
    }
    .right_vlabels>div {
        position: absolute;
        bottom:0;
        width:100%;
    }

    .previewIdChange .green {
        color: #0f0;
    }
    .previewIdChange .red {
        color: #f00;
    }
    /* Classes here are generated in templates from 'top' etc See labelicon classes below */
    .label_top {
        bottom: 100%;
        width: 300%;
        left: -100%;
        text-align: center;
        margin-bottom: 3px;
    }
    .label_bottom {
        top: 100%;
        width: 300%;
        left: -100%;
        text-align:center;
    }
    .label_left {
        right: 100%;
        text-align: right;
    }
    .label_right {
        left: 100%;
        text-align: left;
        width: 100%;
    }
    .label_topleft,
    .label_topright,
    .label_bottomleft,
    .label_bottomright {
        margin: 0 5px 1px 4px;
    }

    .label_topleft {
        top: 0;
        left: 0;
        text-align: left;
    }
    .label_topright {
        top: 0;
        right: 0;
        text-align: right;
    }
    .label_bottomleft {
        bottom: 0;
        left: 0;
        text-align: left;
    }
    .label_bottomright {
        bottom: 0;
        right: 0;
        text-align: right;
    }

    /* Transformation to font-based icons - These are split('-') to get position: 'top' etc */
    .labelicon-topleft {
        -webkit-transform: rotate(-90deg);
        transform: rotate(-90deg)
    }
    .labelicon-bottomleft {
        -webkit-transform: rotate(-180deg);
        transform: rotate(-180deg);
        position: relative;
        top: 5px;
    }
    .labelicon-bottomright {
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }
    .labelicon-top {
        -webkit-transform: rotate(-90deg);
        transform: rotate(-90deg);
    }
    .labelicon-left {
        position: relative;
        top: 5px;
        -webkit-transform: rotate(-180deg);
        transform: rotate(-180deg)
    }
    .labelicon-leftvert {
        position: relative;
        top: 5px;
        -webkit-transform: rotate(-180deg);
        transform: rotate(-180deg);
    }
    .labelicon-right {
    }
    .labelicon-bottom {
        -webkit-transform: rotate(90deg);
        transform: rotate(90deg);
    }

    .imageViewer, .ztSliders {
        height: 270px;
    }
    .ztSliders {
        position: absolute;
        top: 0;
    }

    .vp_img {
        position:absolute;
    }
    .vp_frame {
        position: absolute;
        left: 20px;
        overflow: hidden;
        border: solid black 1px;
        background: #ddd;
    }
    #vp_z_label {
        position:absolute;
        top: -5px;
        left: 1px;
        padding: 0 2px;
    }
    #vp_z_value {
        position: absolute;
        bottom: 20px;
        right: 95%;
        white-space: nowrap;
    }
    #vp_t_label {
        position: absolute;
        left: 6px;
        bottom: -2px;
    }
    #vp_t_value {
        position: absolute;
        left: 240px;
        bottom: 0;
    }
    #vp_deltaT {
        position: absolute;
        left: 100px;
        bottom: -19px;
    }
    .no-padding {
        padding: 0;
    }
    .tab-footer {
        border-top: solid #dddddd 1px;
        margin-top:15px;
        padding-top: 4px;
    }
    .tab-pane .ui-slider {
        margin: 13px 5px 6px;
        border: 4px solid #fff;
        cursor: pointer;
    }
    #viewportContainer {
        position: relative;
    }
    .tab-pane .ui-slider-handle {
        background: none repeat scroll 0 0 #DDDDDD;
        border: 1px solid #aaa;
        height: 14px;
    }
/* ... */

